@@ -1,3 +1,7 @@
+2016-09-16  Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/GSTLS.m: Fix bug removing mapped certificates.
+
 2016-09-06  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Headers/Foundation/NSScanner.h:
